<resources>
    <string name="app_name">Customer_Service</string>
    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Email">Email</string>
    <string name="save">Save</string>
    <string name="add_btn">ADD Service</string>
    <string name="sport">Sport</string>
    <string name="Entertainment">Entertainment</string>
    <string name="Jobs">Jobs</string>
    <string name="other_service">Other Service</string>
    <string name="health">Health Care</string>
    <string-array name="Service">
        <item>Sport</item>
        <item>Entertainment</item>
        <item>Jobs</item>
        <item>Health Care</item>
        <item>Other Service</item>
    </string-array>
    <string-array name="service_type">
        <item>Required</item>
        <item>Avaliable </item>
    </string-array>
    <string name="service_type">"Service "</string>
    <string name="date">Date</string>
    <string name="service_name">Service Name</string>
    <string name="description">Description</string>
    <string name="share">Share</string>
    <string name="ava_position">Avaliable Position</string>
    <string name="service_spe">Service Type</string>
    <string name="sname_validator">This Can\'t Be Null</string>
    <string name="Date_valid">Date Is not Valid</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="email_valid">Not a Valid Email</string>
    <string name="prompt_password">Password</string>

</resources>

